--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -9,12 +9,13 @@
 
 {% block main %}
     {# djlint:off #}
-    {% call onsPanel({
-        "spacious": true,
-        "type": "success",
-        "classes": "ons-u-mb-s",
-        "iconType": "check",
-        "iconSize": "xl"
+    {% call
+        onsPanel({
+            "spacious": true,
+            "type": "success",
+            "classes": "ons-u-mb-s",
+            "iconType": "check",
+            "iconSize": "xl"
         })
     %}
     <h1 data-qa="feedback-thank-you-text">{{ _("Thank you for your feedback") }}</h1>
