--- a/templates/partials/guidance.html
+++ b/templates/partials/guidance.html
@@ -1,13 +1,15 @@
 {% from "components/panel/_macro.njk" import onsPanel %}
 
 {# djlint:off #}
-{% call onsPanel({
-    "id": guidance_id,
-    "classes": "ons-u-mb-m",
-    "attributes": {
-    "data-qa": guidance_id
-    }
-    }) %}
+{% call
+    onsPanel({
+        "id": guidance_id,
+        "classes": "ons-u-mb-m",
+        "attributes": {
+            "data-qa": guidance_id
+        }
+    })
+%}
     {% set contents = guidance.contents %}
     {% include 'partials/contents.html' %}
 {% endcall %}
