--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -6,12 +6,15 @@
 {% set save_on_signout = true %}
 
 {% block main %}
-    {% call onsPanel({
-        "type": "success",
-        "classes": "ons-u-mb-m",
-        "iconType": "check",
-        "iconSize": "l"
-        }) %}
+    {# djlint:off #}
+    {% call
+        onsPanel({
+            "type": "success",
+            "classes": "ons-u-mb-m",
+            "iconType": "check",
+            "iconSize": "l"
+        })
+    %}
         <h1 id="question-title"
             class="question__title ons-u-mb-xs ons-u-fs-l js-piping">
             {{ _("We have sent a text to {mobile_number}").format(mobile_number=mobile_number) }}
@@ -20,26 +23,30 @@
             {{ _("The text message with an individual access code should arrive soon for them to complete their own census") }}
         </p>
     {% endcall %}
-    {% call onsPanel({
-        "type": "bare",
-        "classes": "ons-u-mb-s",
-        "iconType": "lock"
-        }) %}
+    {% call
+        onsPanel({
+            "type": "bare",
+            "classes": "ons-u-mb-s",
+            "iconType": "lock"
+        })
+    %}
         <p>
             {{ _("The text will be sent from <em>Census2021</em>") }}
         </p>
     {% endcall %}
-    {{ onsButton({
-        "text": _("Continue") ,
-    "variants": 'timer',
-    "classes": 'ons-u-mb-m ons-u-mt-l',
-    "attributes": {
-    'data-qa': 'btn-submit',
-    "data-ga-category": "Submit button",
-    "data-ga-action": "Continue",
-    "data-ga-label": "Continue button click",
-    "data-ga": "click"
-    }
-    })
+    {{
+        onsButton({
+            "text": _("Continue") ,
+            "variants": 'timer',
+            "classes": 'ons-u-mb-m ons-u-mt-l',
+            "attributes": {
+                'data-qa': 'btn-submit',
+                "data-ga-category": "Submit button",
+                "data-ga-action": "Continue",
+                "data-ga-label": "Continue button click",
+                "data-ga": "click"
+            }
+        })
     }}
+    {# djlint:on #}
 {% endblock %}
