--- a/templates/partials/error-panel.html
+++ b/templates/partials/error-panel.html
@@ -12,22 +12,25 @@
         }
         }) or "" }}
 {% endfor %}
+{# djlint:off #}
 {% call
     onsPanel({
-    "type": "error",
-    "classes": "ons-u-mb-s",
-    "title": error_title,
-    "attributes": {
-    "data-qa": "error-body"
-    }
-    })
-    %}
-    {{ onsList({
-        "element": "ol",
+        "type": "error",
+        "classes": "ons-u-mb-s",
+        "title": error_title,
         "attributes": {
-        "data-qa": "error-list"
-        },
-        "itemsList": error_list
-        }) 
+            "data-qa": "error-body"
+        }
+    })
+%}
+    {{
+        onsList({
+            "element": "ol",
+            "attributes": {
+                "data-qa": "error-list"
+            },
+            "itemsList": error_list
+        })
     }}
 {% endcall %}
+{# djlint:on #}
