--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -59,12 +59,14 @@
             {%- endif -%}
         {% endfor %}
         {%- if display.guidance -%}
+            {# djlint:off #}
             {% call onsPanel({
                 "id": "question-guidance-" ~ question.id,
                 "classes": "ons-u-mb-m"
-                }) %}
+            }) %}
                 {% include 'partials/contents.html' %}
             {% endcall %}
+            {# djlint:on #}
         {%- endif -%}
     {% endif %}
 {% endset %}
