--- a/templates/partials/answers/textarea.html
+++ b/templates/partials/answers/textarea.html
@@ -8,18 +8,22 @@
             "description": answer.description
         } %}
 {% endif %}
-{{ onsTextarea({
-"id": answer.id,
-"name": input.name,
-"label": label,
-"value": input._value() | e,
-"charCheckLimit": {
-"limit": answer.max_length | default(input.maxlength, true),
-"charCountSingular": _("You have {x} character remaining"),
-"charCountPlural": _("You have {x} characters remaining")
-},
-"rows": answer.rows,
-"dontWrap": true if mutuallyExclusive else false,
-"mutuallyExclusive": mutuallyExclusive,
-"error": error
-}) }}
+{# djlint:off #}
+{{
+    onsTextarea({
+        "id": answer.id,
+        "name": input.name,
+        "label": label,
+        "value": input._value() | e,
+        "charCheckLimit": {
+            "limit": answer.max_length | default(input.maxlength, true),
+            "charCountSingular": _("You have {x} character remaining"),
+            "charCountPlural": _("You have {x} characters remaining")
+        },
+        "rows": answer.rows,
+        "dontWrap": true if mutuallyExclusive else false,
+        "mutuallyExclusive": mutuallyExclusive,
+        "error": error
+    })
+}}
+{# djlint:on #}
