--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -1,16 +1,18 @@
 {% from "components/details/_macro.njk" import onsDetails %}
 
 {# djlint:off #}
-{% call onsDetails({
-    "classes": "ons-u-mt-s",
-    "title": title,
-    "headingAttributes": {
-    "data-ga": "click",
-    "data-ga-category": "definition",
-    "data-ga-action": "Open panel",
-    "data-ga-label": title
-    }
-    }) %}
+{% call
+    onsDetails({
+        "classes": "ons-u-mt-s",
+        "title": title,
+        "headingAttributes": {
+            "data-ga": "click",
+            "data-ga-category": "definition",
+            "data-ga-action": "Open panel",
+            "data-ga-label": title
+        }
+    })
+%}
     <div class="ons-u-mt-s">
         <p>
             {{ _("You can <em>share your household access code</em> with the people you live with so they can complete their own sections.") }}
