--- a/templates/partials/answers/number.html
+++ b/templates/partials/answers/number.html
@@ -2,22 +2,24 @@
 
 {% set input = form.fields[answer['id']] %}
 {# djlint:off #}
-{{ onsInput({
-"id": answer.id,
-"type": "number",
-"label": {
-"id": answer.id ~ "-label",
-"text": answer.label,
-"description": answer.description
-},
-"value": input._value() | e,
-"name": answer.id,
-"attributes": {
-"data-qa": "input-text"
-},
-"dontWrap": true if mutuallyExclusive else false,
-"mutuallyExclusive": mutuallyExclusive,
-"width": get_width_for_number(answer),
-"error": error
-}) }}
+{{
+    onsInput({
+        "id": answer.id,
+        "type": "number",
+        "label": {
+            "id": answer.id ~ "-label",
+            "text": answer.label,
+            "description": answer.description
+        },
+        "value": input._value() | e,
+        "name": answer.id,
+        "attributes": {
+            "data-qa": "input-text"
+        },
+        "dontWrap": true if mutuallyExclusive else false,
+        "mutuallyExclusive": mutuallyExclusive,
+        "width": get_width_for_number(answer),
+        "error": error
+    })
+}}
 {# djlint:on #}
