--- a/templates/partials/answers/relationship.html
+++ b/templates/partials/answers/relationship.html
@@ -1,10 +1,14 @@
 {% from "components/relationships/_macro.njk" import onsRelationships %}
 
-{{ onsRelationships({
-"id": answer.id,
-"name": answer.id,
-"dontWrap": true,
-"playback": answer["playback"],
-"radios": map_relationships_config(form, answer) ,
-"error": error
-}) }}
+{# djlint:off #}
+{{
+    onsRelationships({
+        "id": answer.id,
+        "name": answer.id,
+        "dontWrap": true,
+        "playback": answer["playback"],
+        "radios": map_relationships_config(form, answer) ,
+        "error": error
+    })
+}}
+{# djlint:oN #}
