--- a/templates/partials/feedback-call-to-action.html
+++ b/templates/partials/feedback-call-to-action.html
@@ -1,10 +1,13 @@
 {% from 'components/feedback/_macro.njk' import onsFeedback %}
 
-{{ onsFeedback({
-"id": "feedback",
-"heading": _("What do you think about this service?") ,
-"content": _("Your comments will help us make improvements"),
-"url": url_for('post_submission.send_feedback'),
-"linkText": _("Give feedback")
-})
+{# djlint:off #}
+{{
+    onsFeedback({
+        "id": "feedback",
+        "heading": _("What do you think about this service?") ,
+        "content": _("Your comments will help us make improvements"),
+        "url": url_for('post_submission.send_feedback'),
+        "linkText": _("Give feedback")
+    })
 }}
+{# djlint:on #}
