--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -1,6 +1,6 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
 
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {% from "components/button/_macro.njk" import onsButton %}
 
@@ -12,7 +12,7 @@
     {% set form = content.form %}
     {% if form.mapped_errors %}
         {% set error_title = _("There is a problem with your answer") %}
-        {% include 'partials/error-panel.html' %}
+        {% include "partials/error-panel.html" %}
     {% endif %}
     <h1 class="question__title ons-u-fs-xxl" data-qa="confirm-email-title">{{ content.question.title }}</h1>
     <div class="question__description">
@@ -20,7 +20,7 @@
     </div>
     {%- for answer in question.answers -%}
         {% set question_title = answer.title %}
-        {% include 'partials/answer.html' %}
+        {% include "partials/answer.html" %}
     {%- endfor -%}
     {# djlint:off #}
     {{
