--- a/templates/errors/401.html
+++ b/templates/errors/401.html
@@ -1,4 +1,4 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("Page is not available") %}
 {% set sign_in = _("You will need to <a href='{url}'>sign back in</a> to access your account").format(url = business_logout_url) %}
