--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,4 +1,4 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("Sorry, there is a problem") %}
 {% set all_contact_us = _("For further help, please <a href='{url}'>contact us</a>.").format(url=contact_us_url) %}
