--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,4 +1,4 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("An error has occurred") %}
 {% set business_sign_in = _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>sign in to your business survey account</a>.").format(url = business_logout_url) %}
