--- a/templates/errors/previously-submitted.html
+++ b/templates/errors/previously-submitted.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
 
 {% set page_title = _("Submission Complete") %}
 {% set return_previous = _("<a href='{url}'>Return to previous page</a>").format(url = thank_you_url) %}
