--- a/templates/errors/submission-failed.html
+++ b/templates/errors/submission-failed.html
@@ -1,4 +1,4 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set hide_sign_out_button = True %}
 {% set page_title = _("Sorry, there is a problem") %}
