--- a/templates/list-action.html
+++ b/templates/list-action.html
@@ -1,4 +1,4 @@
-{% extends 'question.html' %}
+{% extends "question.html" %}
 
 {% block after_submit_button_content %}
     {% if previous_location_url %}
