--- a/templates/listremovequestion.html
+++ b/templates/listremovequestion.html
@@ -1,4 +1,4 @@
-{% extends 'list-action.html' %}
+{% extends "list-action.html" %}
 
 {% if content.individual_response_enabled %}
     {% set show_individual_response_guidance = True %}
