--- a/templates/partials/answer-guidance.html
+++ b/templates/partials/answer-guidance.html
@@ -20,7 +20,7 @@
 %}
     <div class="ons-u-mt-s">
         {% set content_block = answer_guidance.schema_item %}
-        {% include 'partials/content-block.html' %}
+        {% include "partials/content-block.html" %}
     </div>
 {% endcall %}
 {# djlint:on #}
