--- a/templates/partials/block.html
+++ b/templates/partials/block.html
@@ -2,6 +2,6 @@
 <div class="block" id="{{ content.block.id }}">
     {% if 'question' in block %}
         {% set question = block['question'] %}
-        {% include 'partials/question.html' %}
+        {% include "partials/question.html" %}
     {% endif %}
 </div>
