--- a/templates/partials/content-block.html
+++ b/templates/partials/content-block.html
@@ -1,5 +1,5 @@
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {%- if content_block.title -%}<strong class="ons-u-mb-s">{{ content_block.title }}</strong>{% endif %}
 {% set contents = content_block.contents %}
-{% include 'partials/contents.html' %}
+{% include "partials/contents.html" %}
