--- a/templates/partials/definition.html
+++ b/templates/partials/definition.html
@@ -19,6 +19,6 @@
     })
   %}
     {% set contents = definition.contents %}
-    {% include 'partials/contents.html' %}
+    {% include "partials/contents.html" %}
 {% endcall %}
 {# djlint:on #}
