--- a/templates/partials/guidance.html
+++ b/templates/partials/guidance.html
@@ -11,6 +11,6 @@
     })
 %}
     {% set contents = guidance.contents %}
-    {% include 'partials/contents.html' %}
+    {% include "partials/contents.html" %}
 {% endcall %}
 {# djlint:on #}
