--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,6 @@
-{% extends 'layouts/_questionnaire.html' %}
+{% extends "layouts/_questionnaire.html" %}
 
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {% set save_on_signout = true %}
 
@@ -8,6 +8,6 @@
     {% set form = content.form %}
     {% if form and (form.errors or form.question_errors) %}
         {% set error_title = ngettext('There is a problem with your answer', 'There are %(num)s problems with your answer', form.mapped_errors | length) %}
-        {% include 'partials/error-panel.html' %}
+        {% include "partials/error-panel.html" %}
     {% endif %}
 {% endblock form_errors %}
