--- a/templates/sectionsummary.html
+++ b/templates/sectionsummary.html
@@ -1,8 +1,8 @@
-{% extends 'layouts/_questionnaire.html' %}
+{% extends "layouts/_questionnaire.html" %}
 
 {% from "components/button/_macro.njk" import onsButton %}
 
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {% set save_on_signout = true %}
 {# djlint:off #}
@@ -29,17 +29,17 @@
                 {% set add_link_text = summary.add_link_text %}
                 {% set empty_list_text = summary.empty_list_text %}
                 {% set list_title = summary.title %}
-                <div {{'class="ons-u-mb-l"' if not loop.last }} data-qa="{{ summary.list_name }}-list-summary">
+                <div {{ 'class="ons-u-mb-l"' if not loop.last }} data-qa="{{ summary.list_name }}-list-summary">
                     {% if summary.list %}
                         {% set list = summary.list %}
-                        {% include 'partials/summary/list-summary.html' %}
+                        {% include "partials/summary/list-summary.html" %}
                     {% endif %}
                 </div>
             {% endif %}
         {% endfor %}
     {%- else -%}
         <h1>{{ content.summary.title }}</h1>
-        <div>{% include 'partials/summary/summary.html' %}</div>
+        <div>{% include "partials/summary/summary.html" %}</div>
     {% endif %}
 {% endblock %}
 
