--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,4 +1,4 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("Page not found") %}
 {% set all_contact_us = _("If the web address is correct or you selected a link or button, <a href='{url}'>contact us</a> for more help.").format(url=contact_us_url) %}
