--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,6 +1,6 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
 
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {% from "components/button/_macro.njk" import onsButton %}
 
@@ -28,11 +28,11 @@
     {% set form = content.form %}
     {% if form.mapped_errors %}
         {% set error_title = ngettext('There is a problem with your feedback', 'There are %(num)s problems with your feedback', form.mapped_errors | length) %}
-        {% include 'partials/error-panel.html' %}
+        {% include "partials/error-panel.html" %}
     {% endif %}
     <h1 class="question__title ons-u-fs-xxl" data-qa="feedback-title">{{ content.question.title }}</h1>
     {%- for answer in question.answers -%}
-        {% include 'partials/answer.html' %}
+        {% include "partials/answer.html" %}
     {%- endfor -%}
     {# djlint:off #}
     {{
