--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
 
 {% from 'components/button/_macro.njk' import onsButton %}
 {% from 'components/panel/_macro.njk' import onsPanel %}
