--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -39,7 +39,7 @@
 {% if theme %}
     {% do pageConfig.update({"theme":theme}) %}
 {% endif %}
-{% include 'layouts/configs/_header.html' %}
+{% include "layouts/configs/_header.html" %}
 {# if there is not a previous link add extra margin top to the page #}
 {% if not previous_location_url %}
     {% set pageClasses = pageClasses + " ons-u-mt-m" if pageClasses else "ons-u-mt-m" %}
