--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -1,6 +1,6 @@
-{% extends 'layouts/_questionnaire.html' %}
+{% extends "layouts/_questionnaire.html" %}
 
-{% import 'macros/helpers.html' as helpers %}
+{% import "macros/helpers.html" as helpers %}
 
 {% set save_on_signout = true %}
 {% set continue_button_text = _("Continue") %}
@@ -11,7 +11,7 @@
     <h1>{{ title }}</h1>
     {%- if content.list and content.list.list_items -%}
         {% set list = content.list %}
-        <div class="ons-u-mb-m">{% include 'partials/summary/list-summary.html' %}</div>
+        <div class="ons-u-mb-m">{% include "partials/summary/list-summary.html" %}</div>
     {%- endif -%}
-    {% include 'partials/contents.html' %}
-{% endblock %}
+    {% include "partials/contents.html" %}
+{% endblock form_content %}
