--- a/templates/partials/preview-question.html
+++ b/templates/partials/preview-question.html
@@ -21,7 +21,7 @@
                 "classes": "ons-u-mb-m"
             })
         %}
-            {% include 'partials/contents.html' %}
+            {% include "partials/contents.html" %}
         {% endcall %}
         {# djlint:on #}
     {% endif %}
@@ -58,7 +58,7 @@
         'label': answer.label,
         'schema_item': answer.guidance
       } %}
-        {% include 'partials/answer-guidance.html' %}
+        {% include "partials/answer-guidance.html" %}
       {% endwith %}
 {% endif %} #}
     {% endfor %}
