--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -15,7 +15,7 @@
     {% set definition_id = "question-definition" %}
     {% set definition_content %}
         {% set contents = question.definition.contents %}
-        {% include 'partials/contents.html' %}
+        {% include "partials/contents.html" %}
     {% endset %}
     {% set question_definition = {
             "title": question.definition.title,
@@ -44,7 +44,7 @@
 {% set individual_response_guidance %}
     {%- if show_individual_response_guidance == True -%}
         {% set title = _("If you can’t answer questions for this person") %}
-        {% include 'partials/individual-response-guidance.html' %}
+        {% include "partials/individual-response-guidance.html" %}
     {%- endif -%}
 {% endset %}
 {%- if question.warning -%}
@@ -64,7 +64,7 @@
                 "id": "question-guidance-" ~ question.id,
                 "classes": "ons-u-mb-m"
             }) %}
-                {% include 'partials/contents.html' %}
+                {% include "partials/contents.html" %}
             {% endcall %}
             {# djlint:on #}
         {%- endif -%}
@@ -87,11 +87,11 @@
                 "deselectGroupAdjective": deselectGroupAdjective,
                 "deselectExclusiveOptionAdjective": _("deselected")
                 } -%}
-        {% include 'partials/answer.html' %}
+        {% include "partials/answer.html" %}
     {%- else -%}
         {%- set answers -%}
             {%- for answer in question.answers -%}
-                {% include 'partials/answer.html' %}
+                {% include "partials/answer.html" %}
             {%- endfor -%}
         {%- endset -%}
         {{ answers }}
@@ -108,7 +108,7 @@
     }) %}
     {%- if content.list and content.list.list_items -%}
         {% set list = content.list %}
-        <div class="ons-u-mb-m">{% include 'partials/summary/list-summary.html' %}</div>
+        <div class="ons-u-mb-m">{% include "partials/summary/list-summary.html" %}</div>
     {% endif %}
     {{ individual_response_guidance }}
     {{ question_definitions }}
